--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   "author": "David Rampling",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^4.7.1",
+    "@material-ui/icons": "^4.5.1",
     "@types/jest": "24.0.23",
     "@types/node": "12.12.14",
     "@types/react": "16.9.13",
     "@types/react-dom": "16.9.4",
+    "@types/react-router-dom": "^5.1.3",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "react-router-dom": "^5.1.2",
     "typescript": "3.7.2"
   },
   "devDependencies": {
