--- a/package.json
+++ b/package.json
@@ -12,18 +12,21 @@
   "dependencies": {
     "@material-ui/core": "^4.7.1",
     "@material-ui/icons": "^4.5.1",
-    "@types/jest": "24.0.23",
-    "@types/node": "12.12.14",
     "@types/react": "16.9.13",
     "@types/react-dom": "16.9.4",
-    "@types/react-router-dom": "^5.1.3",
+    "@types/react-redux": "^7.1.5",
+    "@types/react-router-dom": "5.1.3",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "react-router-dom": "^5.1.2",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "5.1.2",
+    "redux-thunk": "^2.3.0",
     "typescript": "3.7.2"
   },
   "devDependencies": {
     "@babel/core": "7.7.4",
+    "@types/jest": "^24.0.23",
+    "@types/redux-immutable-state-invariant": "^2.1.1",
     "babel-eslint": "10.0.3",
     "babel-loader": "8.0.6",
     "babel-preset-react-app": "9.0.2",
@@ -33,7 +36,11 @@
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-react": "7.17.0",
     "html-webpack-plugin": "3.2.0",
+    "jest": "^24.9.0",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-immutable-state-invariant": "^2.1.0",
     "style-loader": "1.0.1",
+    "ts-loader": "^6.2.1",
     "webpack": "4.41.2",
     "webpack-bundle-analyzer": "3.6.0",
     "webpack-cli": "3.3.10",
