--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "@types/react-dom": "16.9.4",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "5.1.3",
+    "connected-react-router": "^6.6.1",
+    "history": "^4.10.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "5.1.2",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
+    "typesafe-actions": "^5.1.0",
     "typescript": "3.7.2"
   },
   "devDependencies": {
